Fixes merge issue and sets correct cluster queue

--- a/autocnet_server/config.yml
+++ b/autocnet_server/config.yml
@@ -33,6 +33,8 @@ database:
 
 # Redis Configuration
 redis:
+    host: 'smalls'
+    port: '8000'
     completed_queue: 'athabasca:done'
     processing_queue: 'athabasca:proc'
     working_queue: 'athabasca:working'
