--- a/.travis.yml
+++ b/.travis.yml
@@ -42,12 +42,11 @@ before_install:
   - conda config --set ssl_verify false
   - conda install conda-build anaconda-client
   - conda config --set anaconda_upload yes
-  - conda install pytest
   # - conda install -c conda-forge vlfeat cyvlfeat plio scipy networkx numexpr cython matplotlib pillow runipy geopandas opencv numpy gdal autocnet-dev
 
   # Development installation
-  # - conda install pytest pytest-cov coverage sh anaconda-client
-  # - pip install coveralls
+  - conda install pytest pytest-cov coverage sh anaconda-client conda-build
+  - pip install coveralls
 
 script:
   - pytest tests
