--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: autocnet_server
-  version: 0.1.0
+  version: 0.1.2
 
 source:
    git_url: https://github.com/USGS-Astrogeology/autocnet_server.git
@@ -8,9 +8,15 @@ source:
 requirements:
   build:
     - python
-    - autocnet-dev
+    - autocnet
     - redis
+    - sqlalchemy
+    - geoalchemy2
+    - shapely
   run:
     - python
-    - autocnet-dev
+    - autocnet
     - redis
+    - sqlalchemy
+    - geoalchemy2
+    - shapely
