Multiple small fixes to get synced (#48)
* Adds fundamental matrix computation.

* Removes hard coded PATH

* Fixes copy vs deepcopy key issue

* updates to services and pg access

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     #networks:
     #  - internal
     volumes: 
-      - "/media/fast/ctx_db:/var/lib/postgresql/data"
+      - "/data/fast/ctx_db:/var/lib/postgresql/data"
     ports:
         - "8001:5432"
     command: -c shared_buffers=8GB -c max_connections=250
@@ -33,8 +33,7 @@ services:
       #- internal
       volumes:
         - "./pgbouncer.ini:/etc/pgbouncer/pgbouncer.ini"
-        - "./pgbouncer.log:/var/log/pgbouncer/pgbouncer.log"
-        - "./users.txt:/dd36d41d6c3betc/pgbouncer/users.txt"
+        - "./users.txt:/etc/pgbouncer/users.txt"
   
   pfeffernusse:
       image: jlaura/pfeffernusse
