--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3"
 services:
   db:
     image: mdillon/postgis:9.6-alpine
+    ports:
+        - "8082:5432"
     environment:
       POSTGRES_PASSWORD: abcde
       POSTGRES_USER: jay
@@ -13,12 +15,12 @@ services:
   admin:
       image: thajeztah/pgadmin4
       ports:
-        - "8082:5050"
+        - "8083:5050"
 
   pgbouncer:
       image: brainsam/pgbouncer
       ports:
-        - "8083:6543"
+        - "8084:6543"
       volumes:
         - "./pgbouncer.ini:/etc/pgbouncer/pgbouncer.ini"
         - "./users.txt:/etc/pgbouncer/users.txt"
@@ -29,4 +31,4 @@ services:
       volumes:
            - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
       ports:
-          - "8084:6379"
+          - "8085:6379"
